--- a/src/main/TaxiService/GUI/Login.form
+++ b/src/main/TaxiService/GUI/Login.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="loginPanel" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="500" height="300"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -59,6 +59,15 @@
           </component>
         </children>
       </grid>
+      <component id="245cc" class="javax.swing.JButton" binding="NewUser">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <horizontalAlignment value="0"/>
+          <text value="New User"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
